Fix bug: user can't see whole name of the recipe in the summarizing list if the name of the recile is too long (Task #960)

--- a/src/main/webapp/css/print.css
+++ b/src/main/webapp/css/print.css
@@ -92,6 +92,15 @@
         width: 940px;
     }
 
+    .fixed-table {
+        table-layout:fixed;
+    }
+
+    .summListRecipeName{
+        width: 45%;
+        word-wrap: break-word;
+    }
+
     .table {
         font-size: 12px;
         width: 100%;
